Default technical roles